# Overfloat

./: .gitignore  CONTRIBUTING.md  Overfloat.csproj  Overfloat.slnx  README.md  README.zh.md
.github/workflows/: ci.yml  manual-release.yml
docs/: architecture.md  architecture.zh.md
include/: overfloat.h
python/: README.md  pyproject.toml  setup.py
python/overfloat/: __init__.py
src/Overfloat/: BigIntegerExtensions.cs  OverfloatBitConverter.cs  OverfloatClassification.cs  OverfloatEnvironment.cs  OverfloatExceptionFlags.cs  OverfloatFormatting.cs  OverfloatHandleHelpers.cs  OverfloatInfo.cs  OverfloatMath.cs  OverfloatNumber.cs  OverfloatParsing.cs  OverfloatRoundingMode.cs  OverfloatSpecification.cs  OverfloatStatus.cs  OverfloatValidation.cs  Rational.cs  Utf8Helpers.cs
src/Overfloat/Native/: OverfloatExports.cs
tests/Overfloat.Tests/: Overfloat.Tests.csproj  OverfloatTests.cs  Program.cs
