[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "overfloat"
version = "0.1.0"
description = "Python bindings for the Overfloat native floating-point runtime"
readme = {file = "../README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "Overfloat Contributors"}]

[tool.setuptools]
packages = ["overfloat"]
include-package-data = true

[tool.setuptools.package-data]
overfloat = ["*.so", "*.dll", "*.dylib"]

