[build-system]
requires = ["setuptools>=68", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "overfloat"
dynamic = ["version"]
description = "Python bindings for the Overfloat native floating-point runtime"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{name = "Overfloat Contributors"}]

[tool.setuptools]
packages = ["overfloat"]
include-package-data = true

[tool.setuptools.package-data]
overfloat = ["*.so", "*.dll", "*.dylib"]
